Added an SQLite3 example to the examples.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,22 +1,39 @@
 
-INCLUDES = -I..
+INCLUDES = -I.. -I../.. -I../../sqlite3
+
 VPATH = ..
+VPATH += ../../sqlite3
+VPATH += ../factories
 
 OBJDIR = .
 
-SOURCES = entity.cpp abstractproperty.cpp entexample.cpp
+SOURCES = entity.cpp abstractproperty.cpp entception.cpp
 
 # Define the object files. These will live in a directory structure in the currently defind OBJDIR
-OBJECTS += $(patsubst %.cpp,$(OBJDIR)/%.obj, $(filter %.cpp, $(SOURCES)))
+COMMON_OBJECTS += $(patsubst %.cpp,$(OBJDIR)/%.obj, $(filter %.cpp, $(SOURCES)))
 
-all : entexample
+printtargets :
+	@echo The available example targets are:
+	@echo  * entexample
+	@echo  * sqlite3example: We expect to find an sqlite3 folder in the same
+	@echo                    folder you have the entities repo cloned in.
 
-entexample: $(OBJECTS)
-	g++ -o $@ $(INCLUDES) $(OBJECTS)
+entexample: $(COMMON_OBJECTS) entexample.obj
+	g++ -o $@ $(INCLUDES) $(COMMON_OBJECTS)
+	
+sqlite3example: $(COMMON_OBJECTS) sqlite3example.obj sqlite3.obj sqlite3entityfactory.obj sqlite3persistenceapi.obj
+	g++ -o $@ $(INCLUDES) $^
 
 %.obj : %.cpp
 	g++ -c $< -o $@ $(INCLUDES)
 
+%.obj : %.c
+	gcc -c $< -o $@ $(INCLUDES)
 	
 clean:
-	rm $(OBJECTS)
+	rm $(COMMON_OBJECTS)
+
+printinfo:
+	@echo COMMON_OBJECTS  = $(COMMON_OBJECTS)
+	@echo SOURCES         = $(SOURCES)
+	
