Changed the way persistence converts too and from templated Property objects. There are now two visitor classes. One for reading and one for writing. The Property class makes use of a traits class which provides definitions for converting to and from one of the supported primitives.
There is a bug in the sqlite3persistenceapi when building SQL strings. IT would seem that the property name is return the value of the property.hpp

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -19,7 +19,7 @@ printtargets :
 	@echo                    folder you have the entities repo cloned in.
 
 entexample: $(COMMON_OBJECTS) entexample.obj
-	g++ -o $@ $(INCLUDES) $(COMMON_OBJECTS)
+	g++ -o $@ $(INCLUDES) $^
 	
 sqlite3example: $(COMMON_OBJECTS) sqlite3example.obj sqlite3.obj sqlite3entityfactory.obj sqlite3persistenceapi.obj
 	g++ -o $@ $(INCLUDES) $^
@@ -31,7 +31,7 @@ sqlite3example: $(COMMON_OBJECTS) sqlite3example.obj sqlite3.obj sqlite3entityfa
 	gcc -c $< -o $@ $(INCLUDES)
 	
 clean:
-	rm $(COMMON_OBJECTS)
+	del *.obj
 
 printinfo:
 	@echo COMMON_OBJECTS  = $(COMMON_OBJECTS)
